--- a/src/main/resources/PropertyFiles/InputData.properties
+++ b/src/main/resources/PropertyFiles/InputData.properties
@@ -1,3 +1,1 @@
-#Testcase : validateSearchResultInSearchPage
-ItemName1 =65 inch TV
-randomItemIndex = 1
+#Testcase : Validate add crop functionality
